Few bug fixes + Added Stack overflow Id to Footer Section

--- a/css/style.css
+++ b/css/style.css
@@ -454,7 +454,7 @@ body {
 .feedback-block {
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.75) 0%, rgba(255, 255, 255, 0.75) 60%, rgba(0, 0, 0, 0.1) 60%), url(../img/nat-10.jpg);
   background-size: cover;
-  height: 55rem;
+  height: 65rem;
   border-radius: 4rem;
   box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.5);
   overflow: hidden; }
