--- a/sass/components/_feedback.scss
+++ b/sass/components/_feedback.scss
@@ -1,7 +1,7 @@
 .feedback-block{
     background-image: linear-gradient(105deg, rgba($color-white,.75) 0%, rgba($color-white,.75) 60% ,rgba(transparent,.1) 60%),url(../img/nat-10.jpg);
     background-size: cover;
-    height: 55rem;
+    height: 65rem;
     border-radius: 4rem;
     box-shadow: 0 2rem 3rem rgba($color-black, .5);
     overflow: hidden;
